welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:13: error: type mismatch;
 found   : Unit
 required: Boolean
      return
      ^Program:17: error: type mismatch;
 found   : Unit
 required: Boolean
      gauche()
            ^